Basic Routing and React

--- a/src/pages/despre.astro
+++ b/src/pages/despre.astro
@@ -4,8 +4,5 @@ import MyLayout from '../layouts/MyLayout.astro';
 ---
 
 <MyLayout title="Erasmus">
-	<!-- <p>What a lovely day</p> -->
-	<script>
-		window.location.pathname = '/erasmus'
-	</script>
+  <p>Despre</p>
 </MyLayout>
